--- a/index.html
+++ b/index.html
@@ -55,6 +55,12 @@
 
         body {
             background: rgb(226, 178, 100);
+            background-image: linear-gradient(
+  45deg,
+  hsl(289deg 100% 57%) 0%,
+  hsl(192deg 100% 50%) 50%,
+  hsl(158deg 99% 50%) 100%
+);
             font-family: 'Pixelify Sans', sans-serif;
         }
 
