--- a/index.html
+++ b/index.html
@@ -113,13 +113,13 @@
 
         .loafFi {
             color: #fff;
-            text-shadow: 3px 3px #a50;
+            text-shadow: 3px 3px #283593;
         }
 
         .bg-orange {
             border-radius: 0;
             color: #ff5 !important;
-            background-color: #a50 !important;
+            background-color: #283593 !important;
             text-decoration: none;
             display: inline-block;
             box-shadow: 10px 10px 0 rgba(0, 0, 0, .75);
@@ -132,12 +132,12 @@
 
         .bg-gold {
             border-radius: 0;
-            color: #a50 !important;
+            color: #283593 !important;
             background-color: #ff5 !important;
             text-shadow: 1px 1px rgb(0, 0, 0);
             text-decoration: none;
             display: inline-block;
-            box-shadow: 5px 5px 0 #a50;
+            box-shadow: 5px 5px 0 #283593;
             position: relative;
             font-family: 'Pixelify Sans', sans-serif;
             text-shadow: 1px 1px 0 rgb(0, 0, 0);
@@ -165,7 +165,7 @@
         .introt {
             color: #ffdc9e;
             /* #ff5; */
-            text-shadow: 3px 3px #a50;
+            text-shadow: 3px 3px #283593;
         }
 
         html::-webkit-scrollbar {
@@ -301,7 +301,7 @@
         }
 
         .chart-button {
-            background-color: #ffdc9e;
+            background-color: violet;
             /* brown background */
             color: #8B4513;
             /* white text */
@@ -702,11 +702,11 @@ Let's make magic happen! 🚀
                     <div class="col-lg-12 text-center col-12 mb-4 mb-lg-0 d-flex align-items-center">
 
                         <div class="services-info col-md-8 mx-auto">
-                            <h2 class=" introt mb-4 goldMine" data-splitting>Community Rewards <br /> 
+                            <h2 class=" introt mb-4 goldMine" style="color: #283593;" data-splitting>Community Rewards <br /> 
                             </h2>
 
                             <p class=" gmT">
-                                Join a <a href="" target="_new" style="color:#bb7b01">
+                                Join a <a href="" target="_new" style="color:#283593">
                                     community</a> and win the prizes.
                                 <br />
                                 <span style="font-weight:800;color:#bb7b01">
@@ -727,7 +727,7 @@ Let's make magic happen! 🚀
                         <div class="about-text-wrap text-center">
                             <img src="/bg2.jpg" class="about-image img-fluid">
                             <a href="https://t.me/wonkaonsolana" target="_new" class="  mt-5 mx-auto  chart-button  smoothscroll ">
-                                <h4 style="color:#a50; " class="">Join our Community</h4>
+                                <h4 style="color:#283593; " class="">Join our Community</h4>
                             </a>
                             <img src="/logo.png" alt="" style="width: 100px;margin:0 auto;display: block; margin-top: 0.5rem;">
                         </div>
