--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1">
 
     <!-- Primary Meta Tags -->
-    <title>$WONKA</title>
+    <title>$WONK</title>
 
 
     <link rel="stylesheet" href="https://ajax.googleapis.com/ajax/libs/jqueryui/1.12.1/themes/smoothness/jquery-ui.css">
@@ -409,7 +409,7 @@
             <div class="container">
                 <a class="navbar-brand " style="font-family: 'Pixelify Sans', sans-serif;" href="">
                     <img src="/logo.png" style="  width: 70px;" alt="">
-                    <span data-splitting>WONKA</span>
+                    <span data-splitting>WONK</span>
                 </a>
 
                 <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation" onclick="toggleMenu()">
@@ -435,14 +435,14 @@
                             <a id="modalTrigger" class="nav-link click-scroll buy_letsgo" href="#bread_community">Catpaper<sup></sup></a>
                         </li> -->
                         <li class="nav-item">
-                            <a class="nav-link click-scroll play-chart" href="https://birdeye.so/token/FqmcUrXhJwKiHVRSJ1S7GAq7BFUrYuzT4sMkg62BYJzG?chain=solana" target="_new">Chart</a>
+                            <a class="nav-link click-scroll play-chart" href="https://birdeye.so/token/0x00000000000000000000?chain=solana" target="_new">Chart</a>
                         </li>
 
                     </ul>
-                    <a target="_new" href="https://t.me/wonkaonsolana" class=" telegram-join " style="    margin-right: 1rem;" data-splitting>
+                    <a target="_new" href="https://t.me/wonkonsol" class=" telegram-join " style="    margin-right: 1rem;" data-splitting>
                         <i class="fa-brands fa-telegram"></i> Telegram
                     </a>
-                    <a href="https://twitter.com/WonkaonSol" target="_new" style="    margin-right: 1rem;" class="" data-splitting>
+                    <a href="https://twitter.com/WonkonSol" target="_new" style="    margin-right: 1rem;" class="" data-splitting>
                         <i class="fa-brands fa-twitter"></i> Twitter
                     </a>
 
@@ -460,7 +460,7 @@
                     <div class="col-12 mt-auto mb-5 text-center">
 
                         <h1 class="introt" style="">
-                            <div data-splitting>WONKA</div>
+                            <div data-splitting>WONK</div>
                         </h1>
 
 
@@ -472,13 +472,13 @@
 
 
 
-                        <a href="https://raydium.io/swap/?inputCurrency=sol&outputCurrency=FqmcUrXhJwKiHVRSJ1S7GAq7BFUrYuzT4sMkg62BYJzG" target="_new" class="buy-button contract_btn ">
+                        <a href="https://raydium.io/swap/?inputCurrency=sol&outputCurrency=0x00000000000000000000" target="_new" class="buy-button contract_btn ">
                             Buy Here
                         </a>
-                        <a href="https://t.me/wonkaonsolana" target="_new" class="telegram-button telegram-join">
+                        <a href="https://t.me/wonkonsol" target="_new" class="telegram-button telegram-join">
                             Telegram
                         </a>
-                        <a href="https://birdeye.so/token/FqmcUrXhJwKiHVRSJ1S7GAq7BFUrYuzT4sMkg62BYJzG?chain=solana" target="_new" class="chart-button play-chart">
+                        <a href="https://birdeye.so/token/0x00000000000000000000?chain=solana" target="_new" class="chart-button play-chart">
                             Chart
                         </a>
 
@@ -576,8 +576,8 @@ Let's make magic happen! 🚀
                         </h2>
                         <p class="text-center">
 
-                            <a style="color:#bb7b01 !important" id="copy-button" class="caAddrr animate__animated contract_btn animate__infinite animate__wobble" data-text="FqmcUrXhJwKiHVRSJ1S7GAq7BFUrYuzT4sMkg62BYJzG" href="javascript:void(0)">
-                                FqmcUrXhJwKiHVRSJ1S7GAq7BFUrYuzT4sMkg62BYJzG
+                            <a style="color:#bb7b01 !important" id="copy-button" class="caAddrr animate__animated contract_btn animate__infinite animate__wobble" data-text="0x00000000000000000000" href="javascript:void(0)">
+                                0x00000000000000000000
                                 <i class="fa-solid fa-copy"></i>
 
                             </a>
@@ -594,12 +594,12 @@ Let's make magic happen! 🚀
                                         <img src="/logo.png" class="w-100" alt="">
                                     </h3>
                                     <h3 class="animate__animated animate__bounce animate__infinite"><small class="bAtL">Supply</small></h3>
-                                    <p> 100,000,000,000 <span style="color:#bb7b01" data-splitting> $WONKA
+                                    <p> 100,000,000,000 <span style="color:#bb7b01" data-splitting> $WONK
                                     </span>
                                     </p>
                                     <h3 class="animate__animated animate__bounce animate__infinite"><small class="bAtL">Liquidity</small></h3>
 
-                                    <p>100,000,000,000 <span style="color:#bb7b01" data-splitting> $WONKA
+                                    <p>100,000,000,000 <span style="color:#bb7b01" data-splitting> $WONK
                                     </span> (100%)</p>
                                 </div>
 
@@ -623,7 +623,7 @@ Let's make magic happen! 🚀
                             </div>
 
 
-                            <a class="link-fx-1  color-contrast-higher mt-4" target="_new" href="https://raydium.io/swap/?inputCurrency=sol&outputCurrency=FqmcUrXhJwKiHVRSJ1S7GAq7BFUrYuzT4sMkg62BYJzG">
+                            <a class="link-fx-1  color-contrast-higher mt-4" target="_new" href="https://raydium.io/swap/?inputCurrency=sol&outputCurrency=0x00000000000000000000">
                                 <span class="buyHere contract_btn  animate__animated animate__infinite animate__hinge">Buy
                                     Here</span>
                                 <svg class="icon" viewBox="0 0 32 32" aria-hidden="true">
@@ -648,13 +648,13 @@ Let's make magic happen! 🚀
                                     </h3>
                                     <!-- <h3 class=""><small class="lps animate__animated  animate__infinite animate__rubberBand">cex,marketing,community airdrops</small>
                                     </h3>
-                                    <p> 15B <span style="color:#bb7b01" data-splitting> $WONKA
+                                    <p> 15B <span style="color:#bb7b01" data-splitting> $WONK
                                     </span> (15%)
                                     </p>
-                                    <p> 20B <span style="color:#bb7b01" data-splitting> $WONKA
+                                    <p> 20B <span style="color:#bb7b01" data-splitting> $WONK
                                     </span> (20%)
                                     </p>
-                                    <p> 7B <span style="color:#bb7b01" data-splitting> $WONKA
+                                    <p> 7B <span style="color:#bb7b01" data-splitting> $WONK
                                     </span> (7%)
                                     </p> -->
                                 </div>
@@ -664,7 +664,7 @@ Let's make magic happen! 🚀
 
                                     </h3>
 
-                                    <p>15B <span style="color:#bb7b01" data-splitting> $WONKA
+                                    <p>15B <span style="color:#bb7b01" data-splitting> $WONK
                                     </span> (15%)</p> -->
                                     <h3 class="">
                                         <small class="renounsecOwner">
@@ -678,7 +678,7 @@ Let's make magic happen! 🚀
                             </div>
 
 
-                            <a class="link-fx-1 color-contrast-higher mt-4 contract_btn" target="_new" href="https://raydium.io/swap/?inputCurrency=sol&outputCurrency=FqmcUrXhJwKiHVRSJ1S7GAq7BFUrYuzT4sMkg62BYJzG">
+                            <a class="link-fx-1 color-contrast-higher mt-4 contract_btn" target="_new" href="https://raydium.io/swap/?inputCurrency=sol&outputCurrency=0x00000000000000000000">
                                 <span class="buyHere contract_btn">Buy Here</span>
                                 <svg class="icon" viewBox="0 0 32 32" aria-hidden="true">
                                     <g fill="none" stroke="currentColor" stroke-linecap="round" stroke-linejoin="round">
@@ -710,13 +710,13 @@ Let's make magic happen! 🚀
                                     community</a> and win the prizes.
                                 <br />
                                 <span style="font-weight:800;color:#bb7b01">
-                                    #WONKA
+                                    #WONK
                                 </span> &#x2022;
                                 <span style="font-weight:800;color:#bb7b01">
-                                    #GetThisWONKA
+                                    #GetThisWONK
                                 </span>&#x2022;
                                 <span style="font-weight:800;color:#bb7b01">
-                                    #WONKAToTheMoon 🔥
+                                    #WONKToTheMoon 🔥
                                 </span>
                             </p>
 
@@ -726,7 +726,7 @@ Let's make magic happen! 🚀
                     <div class="col-md-8 mx-auto col-12">
                         <div class="about-text-wrap text-center">
                             <img src="/bg2.jpg" class="about-image img-fluid">
-                            <a href="https://t.me/wonkaonsolana" target="_new" class="  mt-5 mx-auto  chart-button  smoothscroll ">
+                            <a href="https://t.me/wonkonsol" target="_new" class="  mt-5 mx-auto  chart-button  smoothscroll ">
                                 <h4 style="color:#283593; " class="">Join our Community</h4>
                             </a>
                             <img src="/logo.png" alt="" style="width: 100px;margin:0 auto;display: block; margin-top: 0.5rem;">
@@ -771,7 +771,7 @@ Let's make magic happen! 🚀
                         </li>
 
                         <li class="site-footer-link-item">
-                            <a href="#about" class="site-footer-link ">About $WONKA
+                            <a href="#about" class="site-footer-link ">About $WONK
                                     </a>
                         </li>
 
@@ -780,7 +780,7 @@ Let's make magic happen! 🚀
                         </li>
 
                         <li class="site-footer-link-item">
-                            <a href="https://birdeye.so/token/FqmcUrXhJwKiHVRSJ1S7GAq7BFUrYuzT4sMkg62BYJzG?chain=solana" target="_new" class="site-footer-link play-chart">Chart</a>
+                            <a href="https://birdeye.so/token/0x00000000000000000000?chain=solana" target="_new" class="site-footer-link play-chart">Chart</a>
                         </li>
 
 
@@ -807,10 +807,10 @@ Let's make magic happen! 🚀
                     <h5 class="site-footer-title mb-3 socialsL">Socials</h5>
 
 
-                    <a href="https://t.me/wonkaonsolana" target="_new" class=" color-contrast-higher mt-3 telegram-join" style="    margin-right: 1rem;">
+                    <a href="https://t.me/wonkonsol" target="_new" class=" color-contrast-higher mt-3 telegram-join" style="    margin-right: 1rem;">
                         <i class="fa-brands fa-telegram"></i><span class="telegram-join">Telegram</span>
                     </a>
-                    <a href="https://twitter.com/WonkaonSol" target="_new" class=" color-contrast-higher mt-3">
+                    <a href="https://twitter.com/WonkonSol" target="_new" class=" color-contrast-higher mt-3">
                         <i class="fa-brands fa-twitter"></i> Twitter
                     </a>
 
@@ -823,7 +823,7 @@ Let's make magic happen! 🚀
                 <div class="row">
 
                     <div class="col-lg-3 col-12 mt-5">
-                        <p class="copyright-text">Copyright © 2023-204 <b style="color: #965a06">$WONKA
+                        <p class="copyright-text">Copyright © 2023-204 <b style="color: #965a06">$WONK
                                      <!-- <img
                                     src="/img/sol.png" style="width: 20px;" /> <img src="/img/c2.gif" class="w-100"
                                     style="max-width: 60px;" alt=""></b> <b>
@@ -837,17 +837,17 @@ Let's make magic happen! 🚀
                     <div class="col-lg-8 col-12 mt-lg-5">
                         <ul class="site-footer-links">
                             <li class="site-footer-link-item">
-                                <a href="https://raydium.io/swap/?inputCurrency=sol&outputCurrency=FqmcUrXhJwKiHVRSJ1S7GAq7BFUrYuzT4sMkg62BYJzG" target="_new" class="buy_letsgo site-footer-link">
+                                <a href="https://raydium.io/swap/?inputCurrency=sol&outputCurrency=0x00000000000000000000" target="_new" class="buy_letsgo site-footer-link">
 
                                     Raydium</a>
                             </li>
                             <li class="site-footer-link-item">
-                                <a href="https://t.me/wonkaonsolana" target="_new" class="site-footer-link telegram-join">
+                                <a href="https://t.me/wonkonsol" target="_new" class="site-footer-link telegram-join">
                                     <i class="fa-brands fa-telegram"></i> Telegram</a>
                             </li>
 
                             <li class="site-footer-link-item">
-                                <a href="https://twitter.com/WonkaonSol" target="_new" class="site-footer-link"> <i
+                                <a href="https://twitter.com/WonkonSol" target="_new" class="site-footer-link"> <i
                                         class="fa-brands fa-twitter"></i> Twitter</a>
                             </li>
 
