--- a/index.html
+++ b/index.html
@@ -591,7 +591,7 @@ Let's make magic happen! 🚀
 
                                 <div>
                                     <h3 class="">
-                                        <img src="/logo.png" class="w-100" alt="">
+                                        <img src="/token.jpg" style="border-radius: 25px;" class="w-100" alt="">
                                     </h3>
                                     <h3 class="animate__animated animate__bounce animate__infinite"><small class="bAtL">Supply</small></h3>
                                     <p> 100,000,000,000 <span style="color:#bb7b01" data-splitting> $WONK
@@ -644,7 +644,7 @@ Let's make magic happen! 🚀
                             <div class="d-block">
                                 <div>
                                     <h3 class="">
-                                        <img src="/logo.png" class="w-100" alt="">
+                                        <img src="/token.jpg" style="border-radius: 25px;" class="w-100" alt="">
                                     </h3>
                                     <!-- <h3 class=""><small class="lps animate__animated  animate__infinite animate__rubberBand">cex,marketing,community airdrops</small>
                                     </h3>
@@ -725,7 +725,7 @@ Let's make magic happen! 🚀
 
                     <div class="col-md-8 mx-auto col-12">
                         <div class="about-text-wrap text-center">
-                            <img src="/bg2.jpg" class="about-image img-fluid">
+                            <img src="/join.jpg" class="about-image img-fluid">
                             <a href="https://t.me/wonkonsol" target="_new" class="  mt-5 mx-auto  chart-button  smoothscroll ">
                                 <h4 style="color:#283593; " class="">Join our Community</h4>
                             </a>
@@ -837,9 +837,14 @@ Let's make magic happen! 🚀
                     <div class="col-lg-8 col-12 mt-lg-5">
                         <ul class="site-footer-links">
                             <li class="site-footer-link-item">
+                                <a href="https://birdeye.so/token/0x00000000000000000000?chain=solana" target="_new" class="buy_letsgo site-footer-link">
+
+                                    <i class="fa-solid fa-chart-simple"></i> Birdeye</a>
+                            </li>
+                            <li class="site-footer-link-item">
                                 <a href="https://raydium.io/swap/?inputCurrency=sol&outputCurrency=0x00000000000000000000" target="_new" class="buy_letsgo site-footer-link">
 
-                                    Raydium</a>
+                                    <i class="fa-solid fa-right-left"></i>   Raydium</a>
                             </li>
                             <li class="site-footer-link-item">
                                 <a href="https://t.me/wonkonsol" target="_new" class="site-footer-link telegram-join">
