--- a/index.html
+++ b/index.html
@@ -637,7 +637,7 @@ Let's make magic happen! 🚀
                         </div>
                     </div>
                     <div class="col-lg-4 col-12 ">
-                        <img style="    width: 100%;" src="/1.png" alt="">
+                        <!-- <img style="    width: 100%;" src="/1.png" alt=""> -->
                     </div>
                     <div class="col-lg-4 col-12 mt-4 mt-lg-0">
                         <div class="pricing-thumb">
