--- a/index.html
+++ b/index.html
@@ -481,7 +481,9 @@
                         <a href="https://birdeye.so/token/E2Cpg3QqWLncEBqgeQY1kDBA5taeyrpTF8xGiHBhgj4x?chain=solana" target="_new" class="chart-button play-chart">
                             Chart
                         </a>
-
+                        <a href="https://studio.metaplex.com/project/wonk-collection-uvb32" target="_new" class="buy-button contract_btn ">
+                            MINT NFT
+                        </a>
                         <!-- <a style="font-size:1rem" href="javascript:void(0)" class="btn d-block bg-gold mt-5 custom-btn smoothscroll play-thething">
                             <i class="fa-solid fa-play"></i><span class="playthisthing"> Play Kitty Kneads More
                                 Dough</span>
@@ -603,7 +605,7 @@ Let's make magic happen! 🚀
                                     </span> (100%)</p>
                                 </div>
 
-                                <div>
+                                <!-- <div>
                                     <h3 class="">
                                         <small class="renounsecOwner">
                                             <a href="https://solscan.io/tx/3wgqWnwbtqrmc2U1rBwBYNaWbRSXCMvfV8hDzxLL2gJRJJPCEbfJwMSYtRRZFrigmFDzKjCtnSYpcruegieyMytP" target="_new"
@@ -617,13 +619,9 @@ Let's make magic happen! 🚀
                                                     </a> Freezed </small>
                                     </h3>
 
-                                </div>
-
-
+                                </div> -->
                             </div>
-
-
-                            <a class="link-fx-1  color-contrast-higher mt-4" target="_new" href="https://raydium.io/swap/?inputCurrency=sol&outputCurrency=E2Cpg3QqWLncEBqgeQY1kDBA5taeyrpTF8xGiHBhgj4x">
+                            <!-- <a class="link-fx-1  color-contrast-higher mt-4" target="_new" href="https://raydium.io/swap/?inputCurrency=sol&outputCurrency=E2Cpg3QqWLncEBqgeQY1kDBA5taeyrpTF8xGiHBhgj4x">
                                 <span class="buyHere contract_btn  animate__animated animate__infinite animate__hinge">Buy
                                     Here</span>
                                 <svg class="icon" viewBox="0 0 32 32" aria-hidden="true">
@@ -633,42 +631,22 @@ Let's make magic happen! 🚀
                                         <line x1="16" y1="12" x2="22" y2="18"></line>
                                     </g>
                                 </svg>
-                            </a>
+                            </a> -->
                         </div>
                     </div>
                     <div class="col-lg-4 col-12 ">
-                        <!-- <img style="    width: 100%;" src="/1.png" alt=""> -->
-                    </div>
-                    <div class="col-lg-4 col-12 mt-4 mt-lg-0">
                         <div class="pricing-thumb">
                             <div class="d-block">
                                 <div>
                                     <h3 class="">
                                         <img src="/token.jpg" style="border-radius: 25px;" class="w-100" alt="">
                                     </h3>
-                                    <!-- <h3 class=""><small class="lps animate__animated  animate__infinite animate__rubberBand">cex,marketing,community airdrops</small>
-                                    </h3>
-                                    <p> 15B <span style="color:#bb7b01" data-splitting> $WONK
-                                    </span> (15%)
-                                    </p>
-                                    <p> 20B <span style="color:#bb7b01" data-splitting> $WONK
-                                    </span> (20%)
-                                    </p>
-                                    <p> 7B <span style="color:#bb7b01" data-splitting> $WONK
-                                    </span> (7%)
-                                    </p> -->
+
                                 </div>
                                 <div>
-                                    <!-- <h3 class=""><small class=" animate__animated  animate__infinite animate__shakeY">Team
-                                        </small>
-
-                                    </h3>
-
-                                    <p>15B <span style="color:#bb7b01" data-splitting> $WONK
-                                    </span> (15%)</p> -->
                                     <h3 class="">
                                         <small class="renounsecOwner">
-                                        <a href="https://solscan.io/tx/4swLwWZR2EmdPEUvW9KfheWtaepQ3kaQwr8MQNPnPvszAmaF5PHkYmBkv99R2nGNomLqSs4tjWH4JTjPMfGBBccP" target="_new"
+                                        <a href="https://solscan.io/tx" target="_new"
                                             class="animate__animated  animate__infinite animate__tada contract_btn color-contrast-higher">LPs Burn
                                         </a> to sol 1nc1nerator </small>
                                     </h3>
@@ -689,8 +667,66 @@ Let's make magic happen! 🚀
                                 </svg>
                             </a>
                         </div>
+                        <!-- <img style="    width: 100%;" src="/1.png" alt=""> -->
+                    </div>
+                    <div class="col-lg-4 col-12 mt-4 mt-lg-0">
+                        <div class="pricing-thumb">
+                            <div class="d-block">
+                                <div>
+                                    <h3 class="">
+                                        <img src="/nft.jpg" style="border-radius: 25px;" class="w-100" alt="">
+                                    </h3>
+
+                                </div>
+                                <div>
+                                    <h3 class="">
+                                        Mint your golden ticket NFT and join official WONK ruffle ! 
+                                        <small class="renounsecOwner">1 GOLDEN TICKET : 100 SOL </small>
+                                        <small class="renounsecOwner"> 2 GOLDEN TICKET : 75 SOL</small>
+                                        <small class="renounsecOwner"> 3 GOLDET TICKET : 50 SOL</small>
+                                    </h3>
+                                    <br/>
+                                </div>
+
+                            </div>
+
+
+                            <a class="link-fx-1 color-contrast-higher mt-4 contract_btn" target="_new" href="https://studio.metaplex.com/project/wonk-collection-uvb32">
+                                <span class="buyHere contract_btn">MINT  NOW</span>
+                                <svg class="icon" viewBox="0 0 32 32" aria-hidden="true">
+                                    <g fill="none" stroke="currentColor" stroke-linecap="round" stroke-linejoin="round">
+                                        <circle cx="16" cy="16" r="15.5"></circle>
+                                        <line x1="10" y1="18" x2="16" y2="12"></line>
+                                        <line x1="16" y1="12" x2="22" y2="18"></line>
+                                    </g>
+                                </svg>
+                            </a>
+                        </div>
                     </div>
 
+                </div>
+            </div>
+            <div class="container">
+                <div class="row">
+
+                    <div class="col-lg-4 col-12 ">
+                        <img style="    width: 100%;" src="/meme1.jpg" alt="">
+                    </div>
+                    <div class="col-lg-4 col-12 ">
+                        <img style="    width: 100%;" src="/meme2.jpg" alt="">
+                    </div>
+                    <div class="col-lg-4 col-12 ">
+                        <img style="    width: 100%;" src="/meme5.jpg" alt="">
+                    </div>
+                    <div class="col-lg-4 col-12 ">
+                        <img style="    width: 100%;" src="/meme3.jpg" alt="">
+                    </div>
+                    <div class="col-lg-4 col-12 ">
+                        <img style="    width: 100%;" src="/meme4.jpg" alt="">
+                    </div>
+                    <div class="col-lg-4 col-12 ">
+                        <img style="    width: 100%;" src="/meme6.jpg" alt="">
+                    </div>
                 </div>
             </div>
         </section>
@@ -753,7 +789,7 @@ Let's make magic happen! 🚀
                     </div>
 
                     <div class="col-lg-6 col-12 d-flex justify-content-lg-end align-items-center">
-
+                        
                     </div>
                 </div>
             </div>
