--- a/index.html
+++ b/index.html
@@ -442,7 +442,7 @@
                     <a target="_new" href="https://t.me/wonkonsol" class=" telegram-join " style="    margin-right: 1rem;" data-splitting>
                         <i class="fa-brands fa-telegram"></i> Telegram
                     </a>
-                    <a href="https://twitter.com/WonkonSol" target="_new" style="    margin-right: 1rem;" class="" data-splitting>
+                    <a href="https://twitter.com/WonkonSOL" target="_new" style="    margin-right: 1rem;" class="" data-splitting>
                         <i class="fa-brands fa-twitter"></i> Twitter
                     </a>
 
@@ -846,7 +846,7 @@ Let's make magic happen! 🚀
                     <a href="https://t.me/wonkonsol" target="_new" class=" color-contrast-higher mt-3 telegram-join" style="    margin-right: 1rem;">
                         <i class="fa-brands fa-telegram"></i><span class="telegram-join">Telegram</span>
                     </a>
-                    <a href="https://twitter.com/WonkonSol" target="_new" class=" color-contrast-higher mt-3">
+                    <a href="https://twitter.com/WonkonSOL" target="_new" class=" color-contrast-higher mt-3">
                         <i class="fa-brands fa-twitter"></i> Twitter
                     </a>
 
@@ -888,7 +888,7 @@ Let's make magic happen! 🚀
                             </li>
 
                             <li class="site-footer-link-item">
-                                <a href="https://twitter.com/WonkonSol" target="_new" class="site-footer-link"> <i
+                                <a href="https://twitter.com/WonkonSOL" target="_new" class="site-footer-link"> <i
                                         class="fa-brands fa-twitter"></i> Twitter</a>
                             </li>
 
