--- a/index.html
+++ b/index.html
@@ -439,7 +439,7 @@
                         </li>
 
                     </ul>
-                    <a target="_new" href="https://t.me/wonkonsol" class=" telegram-join " style="    margin-right: 1rem;" data-splitting>
+                    <a target="_new" href="https://t.me/WonkPortal" class=" telegram-join " style="    margin-right: 1rem;" data-splitting>
                         <i class="fa-brands fa-telegram"></i> Telegram
                     </a>
                     <a href="https://twitter.com/WonkonSOL" target="_new" style="    margin-right: 1rem;" class="" data-splitting>
@@ -475,7 +475,7 @@
                         <a href="https://raydium.io/swap/?inputCurrency=sol&outputCurrency=0x000000000000000" target="_new" class="buy-button contract_btn ">
                             Buy Here
                         </a>
-                        <a href="https://t.me/wonkonsol" target="_new" class="telegram-button telegram-join">
+                        <a href="https://t.me/WonkPortal" target="_new" class="telegram-button telegram-join">
                             Telegram
                         </a>
                         <a href="https://birdeye.so/token/0x000000000000000?chain=solana" target="_new" class="chart-button play-chart">
@@ -728,7 +728,7 @@ Let's make magic happen! 🚀
                     <div class="col-md-8 mx-auto col-12">
                         <div class="about-text-wrap text-center">
                             <img src="/join.jpg" class="about-image img-fluid">
-                            <a href="https://t.me/wonkonsol" target="_new" class="  mt-5 mx-auto  chart-button  smoothscroll ">
+                            <a href="https://t.me/WonkPortal" target="_new" class="  mt-5 mx-auto  chart-button  smoothscroll ">
                                 <h4 style="color:#283593; " class="">Join our Community</h4>
                             </a>
                             <img src="/logo.png" alt="" style="width: 100px;margin:0 auto;display: block; margin-top: 0.5rem;">
@@ -809,7 +809,7 @@ Let's make magic happen! 🚀
                     <h5 class="site-footer-title mb-3 socialsL">Socials</h5>
 
 
-                    <a href="https://t.me/wonkonsol" target="_new" class=" color-contrast-higher mt-3 telegram-join" style="    margin-right: 1rem;">
+                    <a href="https://t.me/WonkPortal" target="_new" class=" color-contrast-higher mt-3 telegram-join" style="    margin-right: 1rem;">
                         <i class="fa-brands fa-telegram"></i><span class="telegram-join">Telegram</span>
                     </a>
                     <a href="https://twitter.com/WonkonSOL" target="_new" class=" color-contrast-higher mt-3">
@@ -849,7 +849,7 @@ Let's make magic happen! 🚀
                                     <i class="fa-solid fa-right-left"></i>   Raydium</a>
                             </li>
                             <li class="site-footer-link-item">
-                                <a href="https://t.me/wonkonsol" target="_new" class="site-footer-link telegram-join">
+                                <a href="https://t.me/WonkPortal" target="_new" class="site-footer-link telegram-join">
                                     <i class="fa-brands fa-telegram"></i> Telegram</a>
                             </li>
 
