--- a/index.html
+++ b/index.html
@@ -481,7 +481,7 @@
                         <a href="https://birdeye.so/token/0x000000000000000?chain=solana" target="_new" class="chart-button play-chart">
                             Chart
                         </a>
-                        <a href="https://studio.metaplex.com/project/wonk-collection-uvb32" target="_new" class="buy-button contract_btn ">
+                        <a href="https://truffle.wtf/explorer/BKGGYYszkrfKJwPs435yhnHzKGQaLyKi6J2u9K3kTYkB" target="_new" class="buy-button contract_btn ">
                             MINT NFT
                         </a>
                         <!-- <a style="font-size:1rem" href="javascript:void(0)" class="btn d-block bg-gold mt-5 custom-btn smoothscroll play-thething">
