--- a/index.html
+++ b/index.html
@@ -435,7 +435,7 @@
                             <a id="modalTrigger" class="nav-link click-scroll buy_letsgo" href="#bread_community">Catpaper<sup></sup></a>
                         </li> -->
                         <li class="nav-item">
-                            <a class="nav-link click-scroll play-chart" href="https://birdeye.so/token/2RMEkL3A61qH1xwQyaZemDt1xoxskmqRVWD2njfkMuJL?chain=solana" target="_new">Chart</a>
+                            <a class="nav-link click-scroll play-chart" href="https://birdeye.so/token/0x000000000000000?chain=solana" target="_new">Chart</a>
                         </li>
 
                     </ul>
@@ -472,16 +472,16 @@
 
 
 
-                        <a href="https://raydium.io/swap/?inputCurrency=sol&outputCurrency=2RMEkL3A61qH1xwQyaZemDt1xoxskmqRVWD2njfkMuJL" target="_new" class="buy-button contract_btn ">
+                        <a href="https://raydium.io/swap/?inputCurrency=sol&outputCurrency=0x000000000000000" target="_new" class="buy-button contract_btn ">
                             Buy Here
                         </a>
                         <a href="https://t.me/WonkPortal" target="_new" class="telegram-button telegram-join">
                             Telegram
                         </a>
-                        <a href="https://birdeye.so/token/2RMEkL3A61qH1xwQyaZemDt1xoxskmqRVWD2njfkMuJL?chain=solana" target="_new" class="chart-button play-chart">
+                        <a href="https://birdeye.so/token/0x000000000000000?chain=solana" target="_new" class="chart-button play-chart">
                             Chart
                         </a>
-                        <a href="https://truffle.wtf/project/candy" target="_new" class="buy-button contract_btn ">
+                        <a href="#" target="_new" class="buy-button contract_btn ">
                             MINT NFT
                         </a>
                         <!-- <a style="font-size:1rem" href="javascript:void(0)" class="btn d-block bg-gold mt-5 custom-btn smoothscroll play-thething">
@@ -578,8 +578,8 @@ Let's make magic happen! 🚀
                         </h2>
                         <p class="text-center">
 
-                            <a style="color:#bb7b01 !important" id="copy-button" class="caAddrr animate__animated contract_btn animate__infinite animate__wobble" data-text="2RMEkL3A61qH1xwQyaZemDt1xoxskmqRVWD2njfkMuJL" href="javascript:void(0)">
-                                2RMEkL3A61qH1xwQyaZemDt1xoxskmqRVWD2njfkMuJL
+                            <a style="color:#bb7b01 !important" id="copy-button" class="caAddrr animate__animated contract_btn animate__infinite animate__wobble" data-text="0x000000000000000" href="javascript:void(0)">
+                                0x000000000000000
                                 <i class="fa-solid fa-copy"></i>
 
                             </a>
@@ -640,7 +640,7 @@ Let's make magic happen! 🚀
                             </div>
 
 
-                            <a class="link-fx-1 color-contrast-higher mt-4 contract_btn" target="_new" href="https://raydium.io/swap/?inputCurrency=sol&outputCurrency=2RMEkL3A61qH1xwQyaZemDt1xoxskmqRVWD2njfkMuJL">
+                            <a class="link-fx-1 color-contrast-higher mt-4 contract_btn" target="_new" href="https://raydium.io/swap/?inputCurrency=sol&outputCurrency=0x000000000000000">
                                 <span class="buyHere contract_btn">Buy Here</span>
                                 <svg class="icon" viewBox="0 0 32 32" aria-hidden="true">
                                     <g fill="none" stroke="currentColor" stroke-linecap="round" stroke-linejoin="round">
@@ -759,7 +759,7 @@ Let's make magic happen! 🚀
                         </li>
 
                         <li class="site-footer-link-item">
-                            <a href="https://birdeye.so/token/2RMEkL3A61qH1xwQyaZemDt1xoxskmqRVWD2njfkMuJL?chain=solana" target="_new" class="site-footer-link play-chart">Chart</a>
+                            <a href="https://birdeye.so/token/0x000000000000000?chain=solana" target="_new" class="site-footer-link play-chart">Chart</a>
                         </li>
 
 
@@ -816,12 +816,12 @@ Let's make magic happen! 🚀
                     <div class="col-lg-8 col-12 mt-lg-5">
                         <ul class="site-footer-links">
                             <li class="site-footer-link-item">
-                                <a href="https://birdeye.so/token/2RMEkL3A61qH1xwQyaZemDt1xoxskmqRVWD2njfkMuJL?chain=solana" target="_new" class="buy_letsgo site-footer-link">
+                                <a href="https://birdeye.so/token/0x000000000000000?chain=solana" target="_new" class="buy_letsgo site-footer-link">
 
                                     <i class="fa-solid fa-chart-simple"></i> Birdeye</a>
                             </li>
                             <li class="site-footer-link-item">
-                                <a href="https://raydium.io/swap/?inputCurrency=sol&outputCurrency=2RMEkL3A61qH1xwQyaZemDt1xoxskmqRVWD2njfkMuJL" target="_new" class="buy_letsgo site-footer-link">
+                                <a href="https://raydium.io/swap/?inputCurrency=sol&outputCurrency=0x000000000000000" target="_new" class="buy_letsgo site-footer-link">
 
                                     <i class="fa-solid fa-right-left"></i>   Raydium</a>
                             </li>
